feat: update controllers to receive BetRequest and validate the bet size
